objects/vlocity_ins__CustomerInteractionTopic__c.object
<CustomObject>
    <description>A topic discussed or addressed during a customer interaction such as a customer account, a customer asset, a quote or a case. A topic could even be a specific field or aspect of an object such as a charge on a bill or a co-pay on a health insurance coverage.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Discussed</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Held Product Relationship</label>
        <referenceTo>vlocity_ins__AssetPartyRelationship__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomerInteractionId__c</fullName>
        <label>Customer Interaction</label>
        <referenceTo>vlocity_ins__CustomerInteraction__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Outcome__c</fullName>
        <description>Captures the outcome or the end result of the customer interaction topic.</description>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Policy Relationship</label>
        <referenceTo>vlocity_ins__PolicyPartyRelationship__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessName__c</fullName>
        <description>Captures the guided process that has created the customer interaction topic.</description>
        <label>Process Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Reason__c</fullName>
        <description>Records the reason of the outcome.</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cross Order Validation</fullName>
                </value>
                <value>
                    <fullName>Subscription Suspended</fullName>
                </value>
                <value>
                    <fullName>Suspension Reason Mismatch</fullName>
                </value>
                <value>
                    <fullName>Eligibility Check</fullName>
                </value>
                <value>
                    <fullName>Report Fraud</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Subscription Validation</fullName>
                </value>
                <value>
                    <fullName>Add-On</fullName>
                </value>
                <value>
                    <fullName>Top-Up</fullName>
                </value>
                <value>
                    <fullName>Voucher Code Validation</fullName>
                </value>
                <value>
                    <fullName>Provide PUK</fullName>
                </value>
                <value>
                    <fullName>ICCID Validation</fullName>
                </value>
                <value>
                    <fullName>Change Feature</fullName>
                </value>
                <value>
                    <fullName>Credit Check Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Role__c</fullName>
        <formula>vlocity_ins__PolicyPartyRelationshipId__r.vlocity_ins__Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubscriptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Subscription related to the customer interaction topic.</description>
        <label>Subscription</label>
        <referenceTo>vlocity_ins__Subscription__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Interaction Topic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Interaction Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Interaction Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>